--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>mini-userProfiles</title>
+    <title>Quote Book</title>
     <link rel="stylesheet" href="styles.css"></link>
 </head>
 <body>
 
      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
-     <script src="app.js"></script>
-     <script src="controller.js"></script>
-     <script src="service.js"></script>
+     <script src="js/app.js"></script>
+     <script src="js/mainCtrl.js"></script>
+     <script src="js/dataService.js"></script>
 </body>
 </html>
