--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="quoteBook">
 <head>
     <meta charset="utf-8">
     <title>Quote Book</title>
     <link rel="stylesheet" href="styles.css"></link>
 </head>
-<body>
+<body ng-controller="mainCtrl">
 
      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
      <script src="js/app.js"></script>
