trying to set up input

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body ng-controller="mainCtrl">
 
+  {{ test }}
+
+  <input ng-model="quoteBook"></input>
+
      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
      <script src="js/app.js"></script>
      <script src="js/mainCtrl.js"></script>
