--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <button ng-click = "deleteMe(quote.text)">Delete</button>
   </p>
 
+  <input type="text" placeholder="Add new quote!" ng-model='newQuoteText'>
+ <input type="text" placeholder="Quotes author!" ng-model='newQuoteAuthor'>
+ <button ng-click="addQuote()">Add Quote</button>
+
+ <div>
+   Filter: <input type="text" ng-model='filterText'/>
+ </div>
+ ...
+ <p ng-repeat = "quote in quotes | filter: filterText">...</p>
+
      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
      <script src="js/app.js"></script>
      <script src="js/mainCtrl.js"></script>
